@@ -1,3 +1,8 @@
+2005-06-12  johnsu01  <john@wjsullivan.net>
+
+	* delicious.el (delicious-w3m-html): Fixed so that it actually
+	uses 15 for the default number if you hit return.
+
 2005-06-05  johnsu01  <john@wjsullivan.net>
 
 	* delicioapi.el (delicious-send-request): Fixed error checking so
